K8S/elasticsearch/rabbitmq/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  labels:
    env: production
    tier: backend
    app: rabbitmq
    name: rabbitmq-ingress
spec:
  rules:
    - host: rabbitmq.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: 15672
